--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,10 @@ edition = "2024"
 [dependencies]
 postgres = "0.19.10"
 rusqlite = { version = "0.34.0", features = ["bundled"] }
-redis = "0.29.1"
+tokio = { version = "1.44.1", features = ["full"] }
+axum = "0.8.1"
+tower-http = { version = "0.6.2", features = ["full"] }
+tracing = "0.1.41"
+tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
+serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.140"
