--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,12 +4,11 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-postgres = "0.19.10"
-rusqlite = { version = "0.34.0", features = ["bundled"] }
 tokio = { version = "1.44.1", features = ["full"] }
-axum = "0.8.1"
+axum = { version = "0.8.1", features = ["macros"] }
 tower-http = { version = "0.6.2", features = ["full"] }
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
+sqlx = { version = "0.8.3", features = ["postgres", "sqlite", "runtime-tokio"]}
