--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,8 @@ tokio = { version = "1.44.1", features = ["full"] }
 axum = { version = "0.8.1", features = ["macros"] }
 tower-http = { version = "0.6.2", features = ["full"] }
 tracing = "0.1.41"
-tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
+tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 sqlx = { version = "0.8.3", features = ["postgres", "sqlite", "runtime-tokio"]}
+log = "0.4.26"
