--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 sqlx = { version = "0.8.3", features = ["postgres", "sqlite", "runtime-tokio"]}
 log = "0.4.26"
+chrono = "0.4.40"
